--- a/DataProcessorDemo.Mvc/Views/Shared/_Layout.cshtml
+++ b/DataProcessorDemo.Mvc/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Data Processor Demo - KPMG</title>
+    <title>@ViewBag.Title - Data Processor</title>
     @Styles.Render("~/Content/css")
 </head>
 
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Data Processor - KPMG", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Data Processor", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul id="allMenuItems" class="nav navbar-nav">
@@ -40,7 +40,7 @@
         <hr />
         <section>
             <footer>
-                <p>&copy; @DateTime.Now.Year - Data Processor Demo - KPMG</p>
+                <p>&copy; @DateTime.Now.Year - Data Processor</p>
             </footer>
         </section>
     </section>
