Resolved "LINQ to Entities does not recognize the method" bug. Checked in placeholder for unit tests...

--- a/DataProcessingExperiment.Mvc/Views/History/ViewTransactionLog.cshtml
+++ b/DataProcessingExperiment.Mvc/Views/History/ViewTransactionLog.cshtml
@@ -43,7 +43,7 @@ else
                     <tbody>
                         @if ((Model.ProcessedTaxDetails != null) && Model.ProcessedTaxDetails.Any())
                         {
-                            for (int i = 0; i < 1000; i++)
+                            for (int i = 0; i < Model.ProcessedTaxDetails.Count; i++)
                             {
                                 <tr>
                                     <td>@Model.ProcessedTaxDetails[i].Account</td>
@@ -56,7 +56,7 @@ else
                         else
                         {
                             <tr>
-                                <td colspan="4">No data found</td>
+                                <td colspan="4">This feature is being implemented</td>
                             </tr>
                         }
                     </tbody>
@@ -80,7 +80,7 @@ else
                     <tbody>
                         @if ((Model.UnprocessedDetails != null) && Model.UnprocessedDetails.Any())
                         {
-                            for (int i = 0; i < 1000; i++)
+                            for (int i = 0; i < Model.UnprocessedDetails.Count; i++)
                             {
                                 <tr>
                                     <td>@Model.UnprocessedDetails[i].LineData</td>                                    
